axum-macros/tests/debug_handler/fail/argument_not_extractor.stderr
error[E0277]: the trait bound `bool: FromRequestParts<()>` is not satisfied
 --> tests/debug_handler/fail/argument_not_extractor.rs:4:23
  |
4 | async fn handler(foo: bool) {}
  |                       ^^^^ the trait `FromRequestParts<()>` is not implemented for `bool`
  |
  = help: the following other types implement trait `FromRequestParts<S>`:
            <() as FromRequestParts<S>>
            <(T1, T2) as FromRequestParts<S>>
            <(T1, T2, T3) as FromRequestParts<S>>
            <(T1, T2, T3, T4) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7, T8) as FromRequestParts<S>>
          and 25 others
  = note: required because of the requirements on the impl of `FromRequest<(), Body, axum_core::extract::private::ViaParts>` for `bool`
note: required by a bound in `__axum_macros_check_handler_0_0_from_request_check`
 --> tests/debug_handler/fail/argument_not_extractor.rs:3:1
  |
3 | #[debug_handler]
  | ^^^^^^^^^^^^^^^^ required by this bound in `__axum_macros_check_handler_0_0_from_request_check`
4 | async fn handler(foo: bool) {}
  |                       ---- required by a bound in this
  = note: this error originates in the attribute macro `debug_handler` (in Nightly builds, run with -Z macro-backtrace for more info)
